# misregistration

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
demo_data/: README.md
examples/: example_generate_targets.py  example_smoke_test.py
generated_targets/: manifest.json
misregistration/: __init__.py
misregistration/aggregation/: __init__.py  pareto.py  statistics.py
misregistration/calibration/: __init__.py  pixel_scale.py  session_baseline.py
misregistration/calibration_targets/: __init__.py  generate_registration_targets.py
misregistration/io/: __init__.py  loader.py
misregistration/measurement/: __init__.py  colorimetric.py  fiducial.py  ncc.py  shift.py
misregistration/preprocessing/: __init__.py  alignment.py  separation.py
misregistration/simulation/: __init__.py  channel_shift_simulator.py
misregistration/visualization/: __init__.py  misregistration_plots.py  vector_field.py
scripts/: batch_measure_misregistration.py  generate_targets.py  measure_misregistration_from_scan.py  run_benchmark.py  run_dataset_benchmark.py  smoke_test.py  validate_scan.py  visualize_misregistration.py
tests/: test_aggregation.py  test_calibration.py  test_calibration_targets.py  test_colorimetric.py  test_integration.py  test_ncc.py  test_pareto.py  test_separation.py  test_shift.py  test_simulation.py  test_vector_field.py
