[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "misregistration-benchmark"
version = "0.1.0"
description = "Channel misregistration benchmark for CMYK halftone evaluation"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.21",
    "opencv-python-headless>=4.8",
    "tifffile>=2023.1",
    "colour-science>=0.4.3",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["misregistration*"]
